--- a/login.html
+++ b/login.html
@@ -109,8 +109,8 @@
       </div>
       <div class="mb-3">
         <br>
-        <label for="formGroupExampleInput2" class="form-label">Senha</label>
-        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Insira sua senha aqui">
+        <p for="senha">Confirme a senha</p>
+        <input type="password" class="form-control" id="senha" placeholder="Coloque sua senha aqui">
       </div>
       
       <button  type="button" class="btn btn-primary btn-lg"><a href="Index.html">Entrar</a></button>
