--- a/index.html
+++ b/index.html
@@ -24,122 +24,75 @@
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg primary-bg-color py-4 px-2" id="navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><img src="logo6.png" width="175px"></a>
+      <a class="navbar-brand" href="index.html"><img class="logonav" src="logo6.png" width="175px"></a>
       <div id="navbar-items">
-        <div></div>
-        <form class="d-flex" id="search-form">
-          <i class="bi bi-search primary-color"></i>
-          <input class="form-control me-2" type="search" placeholder="Pesquisar..." aria-label="Search">
-        </form>
-        <ul class="navbar-nav mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="login.html">
-              <i class="bi bi-person"></i>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index10.html">
-              <i class="bi bi-heart"></i>
-            </a>
-          </li>
-          <li class="nav-item" id="bag-item">
-            <a class="nav-link" href="index1.html">
-              <i class="bi bi-bag"></i>
-              <b></b>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
+        <div class="container">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#bottom-navbar" aria-controls="bottom-navbar" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="bi bi-list"></i>
+          </button>
+          <ul class="navbar-nav mb-2 mb-lg-0 collapse navbar-collapse" id="bottom-navbar">
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                Home
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#new-products">
+                Agenda
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#bottom-banner">
+                Ministérios
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="blog.html">
+                Quem somos?
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#gallery">
+                Local
+              </a>
+            </li>
+          </ul>
+        </div>
   </nav>
   <nav class="navbar navbar-expand-lg secondary-bg-color p-2" id="bottom-navbar-container">
-    <div class="container">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#bottom-navbar" aria-controls="bottom-navbar" aria-expanded="false" aria-label="Toggle navigation">
-        <i class="bi bi-list"></i>
-      </button>
-      <ul class="navbar-nav mb-2 mb-lg-0 collapse navbar-collapse" id="bottom-navbar">
-        <li class="nav-item">
-          <a class="nav-link" href="#">
-            Home
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#new-products">
-            Produtos
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#bottom-banner">
-            Promoções
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="blog.html">
-            Blog
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#gallery">
-            Contato
-          </a>
-        </li>
-      </ul>
-    </div>
   </nav>
   <!-- FIM NAVBAR -->
   <!-- BANNERS -->
-  <div class="container" id="banners-container">
-    <div id="slider" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="fotobanner.png" class="d-block w-100 img-fluid" alt="...">
-          <div class="carousel-caption primary-bg-color">
-            <h5>Acredite</h5>
-            <p>Na sua própria mudança!</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="fotobanner1.jpg" class="d-block w-100 img-fluid" alt="...">
-          <div class="carousel-caption primary-bg-color">
-            <h5>A Persistência</h5>
-            <p>Realiza o impossível!</p>
-          </div>
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#slider" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#slider" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
     <!-- MINI BANNERS -->
     <br>
     <br>
-    <h1>MAIS VENDIDOS</h1>
+    <br>
+    <div class="planodefundo">
+      <img src="logo6.png" class="logosemfundo">
+      <video autoplay loop muted plays-inline class="back-video">
+        <source src="video.mp4" type="video/mp4">
+      </video>
+    </div>
+    <br>
+    <br>
+    <h1 class="ministerios">Nossos Ministérios</h1>
     <br>
     <br>
     <br>
     <div class="container" id="mini-banners">
       <div class="row justify-content-around">
-        <div class="col-12 silver" id="mini-banner-1">
-          <h2>SILVER</h2>
-          <a href="#" onclick="adicionarAoCarrinho()">Assine Agora</a>
-        </div>
-        <div class="col-12 gold" id="mini-banner-2">
-          <h2>GOLD</h2>
-          <a href="#" onclick="adicionarAoCarrinho1()">Assine Agora</a>
-        </div>
-        <div class="col-12 diamond" id="mini-banner-3">
-          <h2>DIAMOND</h2>
-          <a href="#" onclick="adicionarAoCarrinho2()">Assine Agora</a>
-        </div>
-        <div class="col-12 platinium" id="mini-banner-4">
-          <h2>PLATINIUM</h2>
-          <a href="#" onclick="adicionarAoCarrinho3()">Assine Agora</a>
-        </div>
+        <a href="index1.html"><div class="col-12 silver" id="mini-banner-1">
+          <h2></h2>
+        </div></a>
+        <a href="index1.html"><div class="col-12 gold" id="mini-banner-2">
+          <h2></h2>
+        </div></a>
+        <a href="index1.html"><div class="col-12 diamond" id="mini-banner-3">
+          <h2></h2>
+        </div></a>
+        <a href="index1.html"><div class="col-12 platinium" id="mini-banner-4">
+          <h2></h2>
+        </div></a>
       </div>
     </div>
   </div>
@@ -147,18 +100,37 @@
 <br>
 <br>
   <!-- BANNER DESTAQUE -->
-  <div class="container-fluid" id="bottom-banner">
-    <div class="row">
-      <div class="col-12 col-md-8">
-        <p class="primary-color offer-subtitle">Venha nos visitar e ganhe uma...</p>
-        <h2 class="light-color">AULA EXPERIMENTAL</h2>
-        <p class="secondary-bg-color">Agende sua visita</p>
-        <a href="https://www.google.com.br/maps/place/Escola+SENAI+A.+Jacob+Lafer/@-23.6663679,-46.5211495,17z/data=!3m1!4b1!4m6!3m5!1s0x94ce69d619d62a27:0x41f94d2be4af4536!8m2!3d-23.6663728!4d-46.5185746!16s%2Fg%2F1tfqbc0l?entry=ttu" class="btn btn-primary">Local</a>
+  <div id="carouselExampleCaptions" class="carousel slide">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="fotobanner.png" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+        </div>
       </div>
-      <div class="col-12 col-md-4">
-        <img src="logo4.png" alt="Relógio 7">
+      <div class="carousel-item">
+        <img src="fotobanner1.png" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="fotobanner2.png" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+        </div>
       </div>
     </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
   <!-- PRODUTOS NOVOS -->
   <div class="container" id="new-products">
@@ -308,83 +280,5 @@
       <p>Todos os direitos reservados @2023 <span class="primary-color">BodyFitness</span> - A sua academia preferida</p>
     </div>
   </footer>
-  <script>
-  function adicionarAoCarrinho() {
-  var produto = "PLANO SILVER"; // Nome do produto
-  var quantidade = 1; // Quantidade do produto
-  var preco = 49.90; // Preço do produto
-
-  // Encontre uma posição vazia no carrinho
-  var i = 1;
-  while (localStorage.getItem("produto" + i) !== null) {
-    i++;
-  }
-
-  // Adicione os dados do produto à localStorage
-  localStorage.setItem("produto" + i, produto + " "); // Incluindo tamanho e cor
-  localStorage.setItem("qtd" + i, quantidade);
-  localStorage.setItem("valor" + i, preco);
-
-  // Atualize a página para exibir o produto adicionado no carrinho
-  location.reload();
-}
-function adicionarAoCarrinho1() {
-  var produto = "PLANO GOLD"; // Nome do produto
-  var quantidade = 1; // Quantidade do produto
-  var preco = 99.90; // Preço do produto
-
-  // Encontre uma posição vazia no carrinho
-  var i = 1;
-  while (localStorage.getItem("produto" + i) !== null) {
-    i++;
-  }
-
-  // Adicione os dados do produto à localStorage
-  localStorage.setItem("produto" + i, produto + " "); // Incluindo tamanho e cor
-  localStorage.setItem("qtd" + i, quantidade);
-  localStorage.setItem("valor" + i, preco);
-
-  // Atualize a página para exibir o produto adicionado no carrinho
-  location.reload();
-}
-function adicionarAoCarrinho2() {
-  var produto = "PLANO DIAMOND"; // Nome do produto
-  var quantidade = 1; // Quantidade do produto
-  var preco = 149.90; // Preço do produto
-
-  // Encontre uma posição vazia no carrinho
-  var i = 1;
-  while (localStorage.getItem("produto" + i) !== null) {
-    i++;
-  }
-
-  // Adicione os dados do produto à localStorage
-  localStorage.setItem("produto" + i, produto + " "); // Incluindo tamanho e cor
-  localStorage.setItem("qtd" + i, quantidade);
-  localStorage.setItem("valor" + i, preco);
-
-  // Atualize a página para exibir o produto adicionado no carrinho
-  location.reload();
-}
-function adicionarAoCarrinho3() {
-  var produto = "PLANO PLATINIUM"; // Nome do produto
-  var quantidade = 1; // Quantidade do produto
-  var preco = 199.90; // Preço do produto
-
-  // Encontre uma posição vazia no carrinho
-  var i = 1;
-  while (localStorage.getItem("produto" + i) !== null) {
-    i++;
-  }
-
-  // Adicione os dados do produto à localStorage
-  localStorage.setItem("produto" + i, produto + " "); // Incluindo tamanho e cor
-  localStorage.setItem("qtd" + i, quantidade);
-  localStorage.setItem("valor" + i, preco);
-
-  // Atualize a página para exibir o produto adicionado no carrinho
-  location.reload();
-}
-  </script>
 </body>
 </html>
